RegFerg6 index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Beyond my technical prowess, I bring a collaborative spirit and a knack for clea
 								
 								<ul class="icons">
 									
-									<li><a href="https://www.linkedin.com/in/regina-ferguson" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/regina-ferguson/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/RegFerg6" class="icon fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://public.tableau.com/app/profile/regina.ferguson" class="icon fa-plus"><span class="label">Tableau</span></a></li>
 								</ul>
